j--/tests/pass/GreaterEqual.java
package pass;

public class GreaterEqual {

	public boolean ge(int a, int b) {
		return a >= b;
	}

}
