j--/tests/fail/GreaterEqual.java
package fail;

public class GreaterEqual {

	public static void main(String[] args) {
		System.out.println("coucou" >= 2);
	}

}
